--- a/rent.html
+++ b/rent.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link href="rent css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="css/rent.css" rel="stylesheet" type="text/css">
   <title>Rent</title>
 </head>
