--- a/rent.html
+++ b/rent.html
@@ -7,3 +7,8 @@
   <link href="css/rent.css" rel="stylesheet" type="text/css">
   <title>Rent</title>
 </head>
+<script src="js/rent.js"></script>
+  <script src="js/jquery.js"></script>
+</body>
+
+</html>
