--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <link href="js/scripts.js"
 </head>
 <body>
+  <div class="jumbotron">
+  <div class="container text-center">
+    <h1>Welcome to Rent Shoe</h1>
+    <p>It's Online Shop for Renting Out Shoes</p>
+  </div>
+</div>
 
 
 
