--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
   </div>
 </div>
 
+nav class="navbar navbar-inverse">
+  <div class="container">
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="active nav navbar-nav">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="rent.html">Renter a Shoe</a></li>
+        <li class="active"><a href="borrow.html">Borrow a Shoe</a></li>
+      </ul>
+
 
 
 
