adding list for user and cart

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@ nav class="navbar navbar-inverse">
         <li class="active"><a href="rent.html">Renter a Shoe</a></li>
         <li class="active"><a href="borrow.html">Borrow a Shoe</a></li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="#"><span class="glyphicon glyphicon-user"></span> User Account</a></li>
+        <li class="active"><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 
 
 
