--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link href="css/styles.css"  rel=" stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
-<link href="js/scripts.js"
+<link href="js/scripts.js">
 </head>
 <body>
   <div class="jumbotron">
   <div class="container text-center">
-    <h1>Welcome to Rent Shoe</h1>
-    <p>It's Online Shop for Renting Out Shoes</p>
+    <h1>Rent Shoe</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
   </div>
 </div>
 
