--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="images/shoe1.jpeg" alt="Rent Shoe">
                 <div class="carousel-caption">
                   <h3>Men's Shoe</h3>
-                  <p>Rent a Shoe is always so much fun!</p>
+                  <p>Rent a Shoe is always so much fun!!</p>
                 </div>
               </div>
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">
