adding about us

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
   </div>
 </div>
 
-
-
-
-
+<div class="section about">
+  <div class="container">
+  <h2>About Rent a Shoe</h3>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lacinia massa orci, eget pellentesque purus hendrerit sed. Ut in ex mauris. Sed porttitor risus vitae est aliquam, et porta ante sagittis. Maecenas lobortis ut erat id tincidunt. Fusce hendrerit arcu id efficitur lobortis. Vestibulum finibus pulvinar fringilla. Duis ac velit et ligula finibus porttitor. Phasellus auctor augue non vulputate facilisis. Integer vel mi mollis, tristique justo in, mattis augue.Morbi ut mauris nunc. Quisque mattis maximus rutrum. In ipsum orci, congue sed facilisis ut, mattis sed nunc. Maecenas elementum tortor quam. Pellentesque ac dolor eget ante blandit viverra sed et leo. Proin non lorem non mi blandit venenatis. Donec interdum libero lacus, a hendrerit libero dictum vitae. Nam in efficitur ligula. Maecenas placerat nunc sed nisl mattis bibendum. Nunc aliquam ipsum odio</p>
+</div>
+</div>
 </body>
 </html>
