--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="active nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
-        <li class="active"><a href="rent.html">Renter a Shoe</a></li>
+        <li class="active"><a href="rent.html">Rent a Shoe</a></li>
         <li class="active"><a href="borrow.html">Borrow a Shoe</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
