--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="jumbotron">
   <div class="container text-center">
-    <h1>Rent Shoe</h1>
+    <h1>Rent a Shoe</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
   </div>
 </div>
@@ -33,6 +33,7 @@
   </div>
 </nav>
 
+<div class="container">
 <div class="jos-slide">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
@@ -55,6 +56,7 @@
         </a>
     </div>
   </div>
+</div>
 </div>
 
 <div class="section about">
@@ -90,57 +92,36 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Shoe Rent</div>
-        <div class="panel-body"><img src="images/shoe3.jpeg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Shoe 4</div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Shoe Rent</div>
-        <div class="panel-body"><img src="images/shoe3.jpeg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Shoe 5</div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Shoe Rent</div>
-        <div class="panel-body"><img src="images/shoe3.jpeg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Shoe 6</div>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="container">
-<div class="row">
-  <div class="col-sm-4">
-    <div class="panel panel-primary">
-      <div class="panel-heading">Shoe Rent</div>
-      <div class="panel-body"><img src="images/shoe4.jpeg" class="img-responsive" style="width:100%" alt="Image"></div>
-      <div class="panel-footer">Shoe 4</div>
+<footer class="container-fluid">
+  <div class="row">
+    <div class="col-md-4 text-left">
+    <ul>
+      <li><a href="https://Facebook.com">Facebook</a></li>
+      <li>Twitter</li>
+      <li>LinkedIn</li>
+      <li>Instagram</li>
+      <li>YouTube</li>
+      <li>Medium</li>
+      <li>Google +</li>
     </div>
+
+    <div class="col-md-4 text-center">
+    <iframe src="https://www.w3schools.com"></iframe>
   </div>
-  <div class="col-sm-4">
-    <div class="panel panel-primary">
-      <div class="panel-heading">Shoe Rent</div>
-      <div class="panel-body"><img src="images/shoe4.jpeg" class="img-responsive" style="width:100%" alt="Image"></div>
-      <div class="panel-footer">Shoe 5</div>
-    </div>
-  </div>
-  <div class="col-sm-4">
-    <div class="panel panel-primary">
-      <div class="panel-heading">Shoe Rent</div>
-      <div class="panel-body"><img src="images/shoe4.jpeg" class="img-responsive" style="width:100%" alt="Image"></div>
-      <div class="panel-footer">Shoe 6</div>
-    </div>
-  </div>
+
+  <div class="col-md-4 text-right">
+    <h2>Contacts</h2>
 </div>
-</div>
+</footer>
+
+<footer class="container-fluid text-center">
+  <p>Online Store Copyright</p>
+  <form class="form-inline">Get deals:
+    <input type="email" class="form-control" size="50" placeholder="Email Address">
+    <button type="button" class="btn btn-danger">Sign Up</button>
+
+    <p>2018 all right reserve</p>
 
 </body>
 </html>
