create a file upload provision

--- a/rent.html
+++ b/rent.html
@@ -7,6 +7,20 @@
   <link href="css/rent.css" rel="stylesheet" type="text/css">
   <title>Rent</title>
 </head>
+<body>
+  <div class="container" id="product-form">
+    <div class="row" id="product-row">
+      <div class="col-xs-12 col-md-6" id="uploading-colomn">
+        <form class="md-form">
+          <div class="file-field big">
+            <a class="btn-floating btn-lg amber darken-2 mt-0 float-left">
+            <i class="fa fa-cloud-upload" aria-hidden="true"></i>
+            <input type="file" multiple>
+        </a>
+            <div class="file-path-wrapper">
+              <input class="file-path validate" type="text" placeholder="Upload one or more files">
+            </div>
+
 <script src="js/rent.js"></script>
   <script src="js/jquery.js"></script>
 </body>
