--- a/rent.html
+++ b/rent.html
@@ -20,6 +20,46 @@
             <div class="file-path-wrapper">
               <input class="file-path validate" type="text" placeholder="Upload one or more files">
             </div>
+          </div>
+      </form>
+    </div>
+
+    <div class="col-xs-12 col-md-6" id="uploading-form">
+      <form id="renting-form">
+        <div class="form-group">
+          <label for="product-name">Product Name :</label>
+          <input type="text" class="form-group" required id="product-name">
+        </div>
+        <div class="form-group">
+          <label for="product-description">Description :</label>
+          <input type="text" class="form-group" required id="product-description">
+        </div>
+        <div class="form-group">
+          <label for="product-size">Size :</label>
+          <input type="number" class="form-group" required id="product-size">
+        </div>
+        <div class="form-group">
+          <label for="product-color">Color :</label>
+          <input type="text" class="form-group" required id="product-color">
+        </div>
+
+        <!-- <input type="number" min="1" id="price" name="price" value="" placeholder="" class="" data-aut-id="inPrice">
+<label></label> -->
+        <div class="form-group">
+          <label for="product-price">Suggested Price :</label>
+          <input type="number" class="form-group" required id="product-price">
+        </div>
+        <div class="form-group">
+          <label for="product-location">Location</label>
+          <input type="text" class="form-group" required id="product-location">
+        </div>
+        <button id="renting" class="btn" type="submit">Rent Out</button>
+      </form>
+      <button id="previewing" type="button" class="btn">Preview AD</button>
+
+    </div>
+  </div>
+</div>
 
 <script src="js/rent.js"></script>
   <script src="js/jquery.js"></script>
