--- a/rent.html
+++ b/rent.html
@@ -18,7 +18,7 @@
             <input type="file" multiple>
         </a>
             <div class="file-path-wrapper">
-              <input class="file-path validate" type="text" placeholder="Upload one or more files">
+              <input class="file-path validate" type="text" placeholder="Upload photo">
             </div>
           </div>
       </form>
