adding price tags and styling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Rent a Shoe </title>
-  <link href="css/styles.css"  rel=" stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
-  <script src="js/scripts.js"></script>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>
 </head>
 <body>
   <div class="jumbotron">
@@ -70,23 +70,35 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="panel panel-primary">
-        <div class="panel-heading">Shoe Rent</div>
-        <div class="panel-body"><img src="images/shoe1.jpeg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">shoe 1</div>
+        <div class="panel-heading">Men's Shoe</div>
+        <div class="panel-body"><img src="images/shoe1.jpeg" class="img-responsive" alt="Shoe-1 Display"></div>
+        <div class="panel-footer">
+          Rent Price: UGX <br>
+          Location:  <br>
+          Item Description:</div>
+        <div class="caption">
       </div>
     </div>
+  </div>
+
     <div class="col-sm-4">
       <div class="panel panel-danger">
-        <div class="panel-heading">Shoe Rent</div>
-        <div class="panel-body"><img src="images/shoe1.jpeg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Shoe 2</div>
+        <div class="panel-heading">Kid Shoe</div>
+        <div class="panel-body"><img src="images/shoe1.jpeg" class="img-responsive" alt="Image"></div>
+        <div class="panel-footer">
+          Rent Price: UGX <br>
+          Location:  <br>
+          Item Description:</div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="panel panel-success">
-        <div class="panel-heading">Shoe Rent</div>
-        <div class="panel-body"><img src="images/shoe1.jpeg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Shoe 3</div>
+        <div class="panel-heading">SLadies Shoe</div>
+        <div class="panel-body"><img src="images/shoe1.jpeg" class="img-responsive"  alt="Image"></div>
+        <div class="panel-footer">
+          Rent Price: UGX <br>
+          Location:  <br>
+          Item Description:</div>
       </div>
     </div>
   </div>
@@ -107,7 +119,7 @@
     </div>
 
     <div class="col-md-4 text-center">
-  
+
   </div>
 
   <div class="col-md-4 text-right">
