--- a/index.html
+++ b/index.html
@@ -74,31 +74,31 @@
         <div class="panel-body"><img src="images/shoe1.jpeg" class="img-responsive" alt="Shoe-1 Display"></div>
         <div class="panel-footer">
           Rent Price: UGX <br>
-          Location:  <br>
-          Item Description:</div>
+          size:  <br>
+          Location:</div>
         <div class="caption">
       </div>
     </div>
   </div>
 
     <div class="col-sm-4">
-      <div class="panel panel-danger">
-        <div class="panel-heading">Kid Shoe</div>
+      <div class="panel panel-primary">
+        <div class="panel-heading">Kid's Shoe</div>
         <div class="panel-body"><img src="images/shoe1.jpeg" class="img-responsive" alt="Image"></div>
         <div class="panel-footer">
           Rent Price: UGX <br>
-          Location:  <br>
-          Item Description:</div>
+          size:  <br>
+          Location:</div>
       </div>
     </div>
     <div class="col-sm-4">
-      <div class="panel panel-success">
-        <div class="panel-heading">SLadies Shoe</div>
+      <div class="panel panel-primary">
+        <div class="panel-heading">Ladies Shoe</div>
         <div class="panel-body"><img src="images/shoe1.jpeg" class="img-responsive"  alt="Image"></div>
         <div class="panel-footer">
           Rent Price: UGX <br>
-          Location:  <br>
-          Item Description:</div>
+          size:  <br>
+          Location:</div>
       </div>
     </div>
   </div>
