--- a/index.html
+++ b/index.html
@@ -107,15 +107,16 @@
 
 <footer class="container-fluid">
   <div class="row">
-    <div class="col-md-4 text-left">
-    <ul>
-      <li><a href="https://Facebook.com">Facebook</a></li>
-      <li>Twitter</li>
-      <li>LinkedIn</li>
-      <li>Instagram</li>
-      <li>YouTube</li>
-      <li>Medium</li>
-      <li>Google +</li>
+    <div class="col-md-4 text-left" id="social">
+      <h4>Join us</h4>
+    <ul type="none">
+      <li><a href="https://facebook.com">Facebook</a></li>
+      <li><a href="https://twitter.com">witter</a></li>
+      <li><a href="https://linkedlin.com">LinkedIn</a></li>
+      <li><a href="https://instragram.com">Instagram</a></li>
+      <li><a href="https://YouTube">YouTube</a></li>
+      <li><a href="https://medium.com">Medium</a></li>
+      <li><a href="https://plus.google.com">Google +</a></li>
     </div>
 
     <div class="col-md-4 text-center">
