adding social media links

--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
 <footer class="container-fluid">
   <div class="row">
     <div class="col-md-4 text-left" id="social">
-      <h4>Join us</h4>
-    <ul type="none">
+      <h4>KEEP IN TOUCH</h4>
+      <hr>
+      <p>Keep up to date with our latest, promotions, news and competitions</p>
+    <ul type="none1">
       <li><a href="https://facebook.com">Facebook</a></li>
       <li><a href="https://twitter.com">witter</a></li>
       <li><a href="https://linkedlin.com">LinkedIn</a></li>
