adding address, contact,

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 
 <footer class="container-fluid">
   <div class="row">
-    <div class="col-md-4 text-left" id="social">
+    <div class="col-md-3 text-left" id="social">
       <h4>KEEP IN TOUCH</h4>
       <hr>
       <p>Keep up to date with our latest, promotions, news and competitions</p>
-    <ul type="none1">
+    <ul type="none" class="icon">
       <li><a href="https://facebook.com">Facebook</a></li>
-      <li><a href="https://twitter.com">witter</a></li>
+      <li><a href="https://twitter.com">Twitter</a></li>
       <li><a href="https://linkedlin.com">LinkedIn</a></li>
       <li><a href="https://instragram.com">Instagram</a></li>
       <li><a href="https://YouTube">YouTube</a></li>
@@ -121,12 +121,31 @@
       <li><a href="https://plus.google.com">Google +</a></li>
     </div>
 
-    <div class="col-md-4 text-center">
-
+    <div class="col-md-3 text-center">
+      <h4>About Us</h4>
+      <hr>
+      <a href="#">About us</a> <br>
+      <a href="#">Blog</a> <br>
+      <a href="#">Privacy Policy</a> <br>
+      <a href="#">Terms of Service</a>
   </div>
 
-  <div class="col-md-4 text-right">
-    <h2>Contacts</h2>
+  <div class="col-md-3 text-center">
+    <h4>Rent a Shoe</h4>
+    <hr>
+    <a href="index.html">Home</a> <br>
+    <a href="#">Rent</a> <br>
+    <a href="#">Borrow</a> <br>
+    <a href="https://outlook.live.com/mail">Sign Up</a>
+</div>
+
+  <div class="col-md-3 text-right">
+    <h4>Address</h4>
+    <hr>
+    Lumumba Ave, Kampala <br>
+    Soliz House, 4th Floor <br>
+    Hours: <br>
+    Phone: 256 772 128 128 <br>
 </div>
 </footer>
 
@@ -136,7 +155,7 @@
     <input type="email" class="form-control" size="50" placeholder="Email Address">
     <button type="button" class="btn btn-danger">Sign Up</button>
 
-    <p>2018 all right reserve</p>
+    <p>© 2018 Rent a Shoe. All Rights Reserved.</p>
 
 </body>
 </html>
