--- a/index.html
+++ b/index.html
@@ -110,15 +110,11 @@
     <div class="col-md-3 text-left" id="social">
       <h4>KEEP IN TOUCH</h4>
       <hr>
-      <p>Keep up to date with our latest, promotions, news and competitions</p>
     <ul type="none" class="icon">
       <li><a href="https://facebook.com">Facebook</a></li>
       <li><a href="https://twitter.com">Twitter</a></li>
-      <li><a href="https://linkedlin.com">LinkedIn</a></li>
       <li><a href="https://instragram.com">Instagram</a></li>
       <li><a href="https://YouTube">YouTube</a></li>
-      <li><a href="https://medium.com">Medium</a></li>
-      <li><a href="https://plus.google.com">Google +</a></li>
     </div>
 
     <div class="col-md-3 text-center">
@@ -150,10 +146,13 @@
 </footer>
 
 <footer class="container-fluid text-center">
-  <p>Online Store Copyright</p>
-  <form class="form-inline">Get deals:
+  <div class="foot">
+  <p>Online Shop</p>
+  <form class="form-inline">Get Daily Updates:
     <input type="email" class="form-control" size="50" placeholder="Email Address">
     <button type="button" class="btn btn-danger">Sign Up</button>
+  </div>
+</footer>
 
     <p>© 2018 Rent a Shoe. All Rights Reserved.</p>
 
