deleting and uppercase of footer items

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 
     <div class="col-md-3 text-center">
-      <h4>About Us</h4>
+      <h4>ABOUT US</h4>
       <hr>
       <a href="#">About us</a> <br>
       <a href="#">Blog</a> <br>
@@ -127,7 +127,7 @@
   </div>
 
   <div class="col-md-3 text-center">
-    <h4>Rent a Shoe</h4>
+    <h4>RENT A SHOE</h4>
     <hr>
     <a href="index.html">Home</a> <br>
     <a href="#">Rent</a> <br>
@@ -136,7 +136,7 @@
 </div>
 
   <div class="col-md-3 text-right">
-    <h4>Address</h4>
+    <h4>ADDRESS</h4>
     <hr>
     Lumumba Ave, Kampala <br>
     Soliz House, 4th Floor <br>
@@ -154,7 +154,9 @@
   </div>
 </footer>
 
+<div class="foo3">
     <p>© 2018 Rent a Shoe. All Rights Reserved.</p>
+  </div>
 
 </body>
 </html>
