js form login form

--- a/user.html
+++ b/user.html
@@ -29,7 +29,7 @@
 						<label for="loginPassword">Password</label>
 						<input type="text" class="form-control">
 					</div>
-    	<button type="button">Sign In</button>
+    	<button type="button" id="btn">Sign In</button>
 	<form>
 	</div>
 
